--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Pizza Palace</title>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
   </head>
-  <body></body>
+  <body>
+    <h1>Build Your Dream Pizza!</h1>
+  </body>
 </html>
