add name email and phone

--- a/index.html
+++ b/index.html
@@ -8,5 +8,31 @@
   </head>
   <body>
     <h1>Build Your Dream Pizza!</h1>
+    <form>
+      <div>
+        <div>
+          <label for="name">Name</label>
+        </div>
+        <div>
+          <input type="text" id="name" />
+        </div>
+      </div>
+      <div>
+        <div>
+          <label for="email">Email</label>
+        </div>
+        <div>
+          <input type="email" id="email" />
+        </div>
+      </div>
+      <div>
+        <div>
+          <label for="phone">Phone</label>
+        </div>
+        <div>
+          <input type="tel" id="phone" />
+        </div>
+      </div>
+    </form>
   </body>
 </html>
