--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <input type="text" id="name" />
         </div>
       </div>
+
       <div>
         <div>
           <label for="email">Email</label>
@@ -25,12 +26,30 @@
           <input type="email" id="email" />
         </div>
       </div>
+
       <div>
         <div>
           <label for="phone">Phone</label>
         </div>
         <div>
           <input type="tel" id="phone" />
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <input type="radio" id="small" />
+          <label for="small">Small</label>
+        </div>
+
+        <div>
+          <input type="radio" id="medium" />
+          <label for="medium">Medium</label>
+        </div>
+
+        <div>
+          <input type="radio" id="large" />
+          <label for="large">Large</label>
         </div>
       </div>
     </form>
