--- a/index.html
+++ b/index.html
@@ -72,6 +72,59 @@
           <option>Stuffed</option>
         </select>
       </div>
+
+      <h3>Select pizza toppings</h3>
+
+      <hr />
+
+      <div>
+        <div>
+          <input type="checkbox" id="pepperoni" />
+          <label for="pepperoni">Pepperoni</label>
+        </div>
+        <div>
+          <input type="checkbox" id="mushrooms" />
+          <label for="mushrooms">Mushrooms</label>
+        </div>
+        <div>
+          <input type="checkbox" id="extra_cheese" />
+          <label for="extra_cheese">Extra Cheese</label>
+        </div>
+        <div>
+          <input type="checkbox" id="bell_peppers" />
+          <label for="bell_peppers">Bell Peppers</label>
+        </div>
+        <div>
+          <input type="checkbox" id="olives" />
+          <label for="olives">Olives</label>
+        </div>
+        <div>
+          <input type="checkbox" id="chicken" />
+          <label for="chicken">Chicken</label>
+        </div>
+      </div>
+
+      <h3>Other Information</h3>
+
+      <hr />
+
+      <div>
+        <div>
+          <label for="special_instructions">Special Instructions</label>
+        </div>
+        <div>
+          <textarea rows="6" id="special_instructions"></textarea>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <label for="delivery_address">Delivery Address</label>
+        </div>
+        <div>
+          <textarea rows="6" id="delivery_address"></textarea>
+        </div>
+      </div>
     </form>
   </body>
 </html>
