add submit button

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
           <textarea rows="6" id="delivery_address"></textarea>
         </div>
       </div>
+
+      <div>
+        <button type="submit">Place Order</button>
+      </div>
     </form>
   </body>
 </html>
